# claws-win32-installer

./: .gitignore  AUTHORS  INSTALL  Makefile.am  README  autogen.sh  configure.ac  configure.ac.template
doc/: Makefile.am  Makefile.in  license-page
doc/logo/: Makefile.am  Makefile.in
m4/: claws-mail.m4  gpg4win.m4  po.m4
patches/atk-2.36.0/: 01-cross-build.patch  01-meson-build.patch
patches/bzip2-1.0.8/: 01-g10-bzlib_h.patch  02-g10-Makefile.patch
patches/cairo-1.10.2/: 01-fix-A1-surfaces.patch  02-reset-clip-region.patch  03-fix-ffs.patch  99-libtoolize.patch
patches/cairo-1.17.4/: 01-nofortify-hack.patch
patches/claws-mail/: 10-Defer-all-painting-outside-of-widget-draw-entrypoint.patch
patches/claws-mail-3.11.1/: 01-mingw.patch  02-ldap-opt.patch  03-rssyl.patch  04-no-link.patch  05-ldflags.patch  06-pthread.patch  07-g_stat.patch  08-libravatar-prefs_common.patch  09-fancy-defs.patch  10-no-own-opendir.patch  11-ldapquery-crash-fix.patch  12-editldap-tls.patch  13-vcalendar-opendir.patch
patches/claws-mail-3.11.1git179/: folderview-speedups.patch  ms.patch  ms2.patch
patches/claws-mail-3.12.0/: 01-bug3475-dragndrop.patch  02-bug2115-dragndrop-percent.patch  03-bug3454-glib-funcs.patch  ipv6-imap-cachedir.patch  managesieve-defs.patch  trayicon.patch  v6-configure.patch  v6.patch
patches/claws-mail-3.13.1/: 01-no-include-socket-h.patch  02-vcalendar-symbol-defs.patch
patches/claws-mail-3.13.2/: 02-rssyl-typo-fix.patch  03-rcdir.patch
patches/claws-mail-3.15.0/: 03-g_strndup.patch
patches/claws-mail-3.16.0/: 00-undirty-version-file.patch  01-etpan-sasl-plugin-path.patch  02-missing-gerror-init.patch
patches/claws-mail-3.17.1/: 99-manual.patch
patches/claws-mail-3.17.3/: 99-debug-log-menuitem.patch  99-dont-cast-time_t.patch  99-file-open-dialog-fix.patch  99-mimeview-alertpanel-api-fix.patch  99-pid.patch  99-printf-formats.patch  99-session-proxy.patch  99-sieve-hhu-format.patch  99-strftime-r.patch  99-utils-c-include-fix.patch
patches/claws-mail-3.17.4/: 01-etpan-sasl-plugin-path.patch  99-clawsdef-litehtml.patch  99-clawsdef.patch  99-litehtml-makefile-in.patch  99-litehtml-os-types.patch
patches/claws-mail-3.17.5/: 99-clawsdef.patch
patches/claws-mail-3.17.8/: 02-quote-fmt-parse.patch  03-fd_write.patch  04-fclose.patch  05-define-WIN32-for-litehtml.patch  06-Double-buffer-row-drawing-in-gtkcmctree.patch  48-build-outside-01-plugins.patch  49-build-outside-02-manual.patch  50-claws-mail-lua.patch  99-autogen.sh-for-lua.patch
patches/crypt-1.1/: 01-build-dll.patch
patches/cyrus-sasl-2.1.26/: 02-exeext.patch  04-manpage-paths.patch  07-fix-pkgconfig.patch  08-cyrus-sasl-2.1.26-size_t.patch  09-cyrus-sasl-2.1.26-msys2.patch  10-MinGW-w64-already-has-getopt.patch  11-MinGW-w64-add-disable-win32-reg-option.patch  13-plugins-COMPAT_OBJS_REAL.patch  14-MinGW-w64-add-LIBSASL_API-to-function-definitions.patch  15-MinGW-w64-define-LIBSASL_EXPORTS_eq_1-for-sasldb.patch  17-MinGW-w64-define-S_IRUSR-and-S_IWUSR.patch  19-paths-relocation.patch
patches/cyrus-sasl-2.1.27/: 01-md5-typedef.patch  01-no-undefined.patch  02-tchar.patch  03-exports.patch  03-fix-plugins.patch  04-paths-relocation.patch  05-remove-warnings.patch  06-fix-sqlite-search.patch  12-MinGW-w64-uses-ws2_32-not-socket.patch  16-MinGW-w64-define-WIN32_LEAN_AND_MEAN-avoiding-handle_t-redef.patch  18-MinGW-w64-use-windlopen.c-not-dlopen.c.patch  20-makemd5.patch  99-reautomagic.patch
patches/enchant-1.6.0/: 01-no-tests.patch  99-autogen.sh.patch
patches/enchant-2.2.15/: 01-fix-relocation.patch
patches/fontconfig-2.11.1/: 01-no-fluff.patch
patches/fontconfig-2.13.93/: 01-no-fluff.patch
patches/gdk-pixbuf-2.36.11/: 01-fix-build.patch  02-no-tests.patch
patches/gdk-pixbuf-2.36.12/: 01-fix-build.patch  02-no-tests.patch
patches/glib-2.45.2/: 02-folder-icons.patch
patches/glib-2.49.2/: 03-wchar64.patch
patches/glib-2.56.4/: 02-broken-ip-mreq-source-struct.patch  03-no-tests.patch
patches/glib-networking-2.45.1/: 01-giomoduledir.patch
patches/glib-networking-2.48.2/: 01-giomoduledir.patch
patches/gnutls-2.12.23/: omit-doc.patch
patches/gnutls-3.4.7/: 01-no-endservent.patch
patches/gnutls-3.5.2/: 01-no-endservent.patch
patches/gpgme-1.5.5/: 01-remove-mkstemp.patch
patches/gpgme-1.6.0/: 01-remove-mkstemp.patch
patches/gpgme-1.7.0/: programfiles-x86-fix.patch
patches/gtk+-2.24.31/: 00-fix-private-defs.patch
patches/gtk+-2.24.32/: 00-fix-private-defs.patch  01-no-tests-demos.patch
patches/gtk+-2.24.33/: 01-no-tests-demos.patch
patches/harfbuzz-1.8.8/: 01-no-tests-utils-docs.patch
patches/harfbuzz-2.6.7/: 01-no-tests-utils-docs.patch
patches/icu4c-58_2-src/: 01-libnames.patch  03-no-xlocale.patch  99-build.patch
patches/icu4c-58_3-src/: 02-float128-clang.patch  99-build.patch
po/: POTFILES.in  Rules-nsis  ar.gmo  ar.nsi  ar.po  ar.po~  claws-mail-win32.pot  claws-mail.pot  cz.gmo  cz.nsi  cz.po  cz.po~  de.gmo  de.nsi  de.po  de.po~  es.gmo  es.nsi  es.po  es.po~  fr.gmo  fr.nsi  fr.po  fr.po~  it.gmo  it.nsi  it.po  it.po~  nsis-msgfmt.c  pt.gmo  pt.nsi  pt.po  pt.po~  ru.gmo  ru.nsi  ru.po  ru.po~
src/: Makefile.am  Makefile.in  Toolchain-mingw32.cmake.in  claws-mail-3.12.0-1.exe.asc  claws-mail-3.12.0-1.exe.md5  claws-mail-src-3.12.0-1.exe.asc  claws-mail-src-3.12.0-1.exe.md5  claws-mail.mk.in  claws-mail.nsi  config.nsi.in  functions.nsi  gnupg-uninst.nsi  gpg4win-src.nsi  gpg4win.mk.in  gpg4win.nsi  inst-atk.nsi  inst-claws-mail.nsi  inst-expat.nsi  inst-fontconfig.nsi  inst-freetype.nsi  inst-glib-networking.nsi  inst-gmp.nsi  inst-gnupg2.nsi  inst-gnutls.nsi  inst-gpa.nsi  inst-gpg4win.nsi  inst-gtk+.nsi  inst-harfbuzz.nsi  inst-jpeg.nsi  inst-libetpan.nsi  inst-libsoup.nsi  inst-libtasn1.nsi  inst-nettle.nsi  inst-pinentry.nsi  inst-pixman.nsi  inst-sections.nsi  inst-webkit.nsi  installer-finish.nsi  installer-setdefaultclient.ini  installer.nsi  (+35 more)
src/dictionaries/: Makefile.am  Makefile.in
src/gtk-add/: Makefile.am
src/gtk-add/etc/gtk-3.0/: settings.ini
src/gtk-add/share/themes/win71/gtk-3.0/: gtk-win32-base.css  gtk.css
(+47 files in other folders)
